agregando estilo a tabla

--- a/carrito.html
+++ b/carrito.html
@@ -15,7 +15,7 @@
     <title>Ejemplo carrito</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="container navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">YAMPAI S.A
         </a>
@@ -60,7 +60,7 @@
             <button class="btn btn-danger" id="btn-vaciar">Vaciar carrito</button>-->
         </div> 
         
-        <div class="row">
+        <div class="row container">
           <table class="table">
             <thead>
               <tr>
@@ -75,6 +75,7 @@
               </tr>
             </thead>
             <tbody>
+              
               <!-- CARGAR PRODUCTOS DE FORMA DINAMICA -->
             </tbody>
           </table>
