--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Ejemplo carrito</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="container navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">YAMPAI S.A
         </a>
